// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Page Test initial load, renders into DOM and matches snapshot 1`] = `
<div
  className="search-page main-content"
>
  <h2
    className="title"
  >
    Search
  </h2>
  <div
    className="activate-panel search-page_form"
  >
    <div
      className="activate-panel_body search-page_form"
    >
      <div
        className="activate-input activate-input--light search-page_form_input"
      >
        <input
          className="activate-input_input"
          disabled={false}
          onChange={[Function]}
          placeholder="Search query"
          type="text"
          value=""
        />
      </div>
      <button
        className="activate-button activate-button--primary activate-button--size-default activate-button--disabled search-page_form_button"
        disabled={true}
        onClick={[Function]}
        to={undefined}
      >
        <span
          className="activate-icon fa fa-search"
          id={undefined}
          onClick={undefined}
        />
        Search
      </button>
    </div>
  </div>
</div>
`;

exports[`Search Page Test with search results, renders into DOM and matches snapshot 1`] = `
<div
  className="search-page main-content"
>
  <h2
    className="title"
  >
    Search
  </h2>
  <div
    className="activate-panel search-page_form"
  >
    <div
      className="activate-panel_body search-page_form"
    >
      <div
        className="activate-input activate-input--light search-page_form_input"
      >
        <input
          className="activate-input_input"
          disabled={false}
          onChange={[Function]}
          placeholder="Search query"
          type="text"
          value=""
        />
      </div>
      <button
        className="activate-button activate-button--primary activate-button--size-default activate-button--disabled search-page_form_button"
        disabled={true}
        onClick={[Function]}
        to={undefined}
      >
        <span
          className="activate-icon fa fa-search"
          id={undefined}
          onClick={undefined}
        />
        Search
      </button>
    </div>
  </div>
  <div
    className="activate-panel search-page_results"
  >
    <div
      className="activate-panel_header search-page_results"
    >
      Search Results
    </div>
    <div
      className="activate-panel_body search-page_results"
    >
      <p>
        <strong>
          1
        </strong>
         
        result was
         found in the 
        <strong>
          foo
        </strong>
         table while looking at the 
        <strong>
          bar
        </strong>
         field.
      </p>
      <p>
        <strong>
          100
        </strong>
         
        results were
         found in the 
        <strong>
          lorem
        </strong>
         table while looking at the 
        <strong>
          ipsum
        </strong>
         field.
      </p>
    </div>
  </div>
</div>
`;
